# seg2form3d

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: measurement_default.json  measurement_surface_normals.json
docs/: DECISION_RULES.md  EXPERIMENTS.md
scripts/: load_env.sh  recompute_example.sh  run_realsense.sh  run_robot.sh  run_tests_without_pytest.py  security_check.py  setup.sh  start_tunnels.sh
src/sku_rgbd/: __init__.py  cli.py  models.py  pipeline.py  recompute.py
src/sku_rgbd/camera/: __init__.py  base.py  realsense.py  robot.py
src/sku_rgbd/measurement/: __init__.py  engine.py  geometry.py  shape3d.py  shape_normals.py
src/sku_rgbd/segmentation/: __init__.py  protocol.py  remote.py
src/sku_rgbd/storage/: __init__.py  run_writer.py
src/sku_rgbd/ui/: __init__.py  renderer.py
tests/: test_dataset_tools.py  test_measurement.py  test_protocol.py  test_roll_risk_v2.py  test_security.py
train/: README.md  deduplicate_coco.py  evaluate_maskrcnn.py  prepare_coco.py  requirements.txt  run_train.sh  serve_maskrcnn.py  train_maskrcnn.py
