[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sku-rgbd-pipeline"
version = "0.1.0"
description = "Modular RGB-D capture, remote instance segmentation and SKU measurement pipeline."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.8",
  "Pillow>=9",
  "requests>=2.28",
  "protobuf>=4",
]

[project.optional-dependencies]
realsense = ["pyrealsense2>=2.54"]
dev = ["pytest>=7"]
train = [
  "torch>=2.2",
  "torchvision>=0.17",
  "pycocotools>=2.0.7",
  "tqdm>=4.66",
]

[project.scripts]
sku-rgbd = "sku_rgbd.cli:main"
sku-rgbd-recompute = "sku_rgbd.recompute:main"

[tool.setuptools.packages.find]
where = ["src"]
